<resources>
    <string name="app_name">电光石火</string>
    <string name="skip">跳过</string>
    <string name="accessibility_service_description">跳过开屏广告</string>
    <string name="skip_service_not_enable">跳过开屏广告服务未启用</string>
    <string name="skip_service_enable">跳过开屏广告服务已启用</string>
    <string name="skip_service_tips">为了确保服务正常运行请勿关闭通知</string>
    <string name="enable">前往开启</string>
    <string name="package_name">包名</string>
    <string name="click_count">点击数</string>
    <string name="is_clickable">可点</string>
    <string name="parent_is_clickable">父View可点</string>
    <string name="click_text">文本</string>
    <string name="logcat">日志</string>
    <string name="account_list">账户列表</string>
    <string name="add_account">添加账户</string>
    <string name="account">account</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="enter">确认</string>
    <string name="account_manager">账号管理</string>
    <string name="today_plan">今日随机训练计划</string>
    <string name="sport_list">运动列表</string>
    <string name="add_sport">添加运动</string>
    <string name="training_way">训练方式</string>
    <string name="by_time">按时间</string>
    <string name="by_group">按组数</string>
    <string name="please_input_duration_min_s">最小持续时间(秒)</string>
    <string name="duration_min_s">最小持续时间(%s)</string>
    <string name="please_input_duration_max_s">最大持续时间(秒)</string>
    <string name="duration_max_s">最大持续时间(%s)</string>
    <string name="please_input_rest_duration">休息时间(秒)</string>
    <string name="please_input_group_duration_s">组间休息时间(秒)</string>
    <string name="max_count">最大每组次数</string>
    <string name="max_count_d">最大每组次数:%d</string>
    <string name="min_count">最小每组次数</string>
    <string name="min_count_d">最小每组次数:%d</string>
    <string name="max_group">最大组数</string>
    <string name="max_group_d">最大组数:%d</string>
    <string name="min_group">最小组数</string>
    <string name="min_group_d">最小组数:%d</string>
    <string name="rest_duration_s">休息时间:%s</string>
    <string name="way_by_time">训练方式:按时间</string>
    <string name="way_by_group">训练方式:按组数</string>
    <string name="sport_name">运动名称</string>
    <string name="sport_name_s">%s</string>
    <string name="minute_d">%d分钟</string>
    <string name="second_d">%d秒</string>
    <string name="minute_second_d">%d分钟%d秒</string>
    <string name="add_sport_tips">Tips: 随机生成运动计划时会在最小最大值之间产生</string>
    <string name="empty_tips">请输入</string>
    <string name="node_size">节点数</string>
    <string name="clazz_name">类名</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="prompt_info_title">验证指纹</string>
    <string name="prompt_info_description">使用指纹加解密账户信息"</string>
    <string name="tips_not_add_password_and_fingerprint">您的手机还没有添加指纹和密码，请先在系统设置里添加。</string>
    <string name="name_s_duration_s"><![CDATA[%s 持续时间<b>%s</b> 休息<b>%s</b>]]></string>
    <string name="name_s_group_d_count_d"><![CDATA[%s <b>%d</b>×<b>%d</b>次 休息<b>%s</b>]]></string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">首页</string>
    <string name="title_random_training">训练</string>
    <string name="title_account">账户</string>
    <string name="copy">复制</string>
    <string name="image">image</string>
</resources>